--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.2.3"
   },
   "devDependencies": {
+    "@supabase/supabase-js": "2.42.0",
     "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
