--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "taisyoku-hikaku",
   "version": "0.1.0",
   "private": true,
+  "type":"module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,15 +11,20 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.43.4",
+    "@tanstack/react-query": "^5.40.1",
+    "@tanstack/react-query-next-experimental": "^5.40.1",
     "joi": "^17.13.1",
     "next": "14.2.3",
+    "next-swagger-doc": "^0.4.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swagger-ui-react": "^5.17.14"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/swagger-ui-react": "^4.18.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
