--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "taisyoku-hikaku",
   "version": "0.1.0",
   "private": true,
-  "type":"module",
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,12 +10,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.15.0",
     "@supabase/supabase-js": "^2.43.4",
     "@tanstack/react-query": "^5.40.1",
     "@tanstack/react-query-next-experimental": "^5.40.1",
     "joi": "^17.13.1",
     "next": "14.2.3",
     "next-swagger-doc": "^0.4.0",
+    "prisma": "^5.15.0",
     "react": "^18",
     "react-dom": "^18",
     "swagger-ui-react": "^5.17.14"
