--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "prisma": "^5.15.0",
     "react": "^18",
     "react-dom": "^18",
-    "swagger-ui-react": "^5.17.14"
+    "swagger-ui-react": "^5.17.14",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "@types/node": "^20",
