--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prisma": "^5.15.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-star-ratings": "^2.3.0",
     "swagger-ui-react": "^5.17.14",
     "swiper": "^11.1.4"
   },
@@ -26,6 +27,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-star-ratings": "^2.3.3",
+    "@types/react-stars": "^2.2.4",
     "@types/swagger-ui-react": "^4.18.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
