--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@marsidev/react-turnstile": "^1.1.0",
     "@prisma/client": "^5.15.0",
     "@supabase/supabase-js": "^2.43.4",
     "@tanstack/react-query": "^5.40.1",
