--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 supabase.txt
+
+googleOauth.json
 # dependencies
 .env
 /node_modules
