--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@marsidev/react-turnstile": "^1.1.0",
     "@prisma/client": "^5.15.0",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.43.4",
     "@tanstack/react-query": "^5.40.1",
     "@tanstack/react-query-next-experimental": "^5.40.1",
